--- a/session_information.Rmd
+++ b/session_information.Rmd
@@ -219,89 +219,69 @@ This vignette contains information about the machines and R environments used to
 # [1] stats4    stats     graphics  grDevices utils     datasets  methods   base     
 # 
 # other attached packages:
-#  [1] HDCytoData_1.20.0               flowCore_2.14.0                
-#  [3] ExperimentHub_2.8.1             AnnotationHub_3.8.0            
-#  [5] BiocFileCache_2.10.1            dbplyr_2.4.0                   
-#  [7] tidyomicsWorkshop_0.16.3        ggtext_0.1.2                   
-#  [9] cowplot_1.1.2                   microbenchmark_1.4.10          
-# [11] tibble_3.2.1                    purrr_1.0.2                    
-# [13] tidytof_0.0.0                   plyranges_1.22.0               
-# [15] tidybulk_1.15.4                 tidySpatialExperiment_0.99.13  
-# [17] tidySummarizedExperiment_1.10.0 SpatialExperiment_1.10.0       
-# [19] tidySingleCellExperiment_1.13.3 SingleCellExperiment_1.24.0    
-# [21] ggplot2_3.4.4                   tidyr_1.3.0                    
-# [23] dplyr_1.1.4                     tidyseurat_0.8.0               
-# [25] ttservice_0.4.0                 edgeR_3.42.4                   
-# [27] limma_3.56.2                    SummarizedExperiment_1.32.0    
-# [29] Biobase_2.62.0                  GenomicRanges_1.54.1           
-# [31] GenomeInfoDb_1.38.5             IRanges_2.36.0                 
-# [33] S4Vectors_0.40.2                BiocGenerics_0.48.1            
-# [35] MatrixGenerics_1.14.0           matrixStats_1.2.0              
-# [37] Seurat_5.0.1                    SeuratObject_5.0.1             
-# [39] sp_2.1-2                       
+#  [1] readr_2.1.5                     HDCytoData_1.20.0               flowCore_2.14.0                
+#  [4] ExperimentHub_2.8.1             AnnotationHub_3.8.0             BiocFileCache_2.10.1           
+#  [7] dbplyr_2.4.0                    tidyomicsWorkshop_0.16.3        ggtext_0.1.2                   
+# [10] cowplot_1.1.3                   microbenchmark_1.4.10           tibble_3.2.1                   
+# [13] purrr_1.0.2                     tidytof_0.0.0                   plyranges_1.22.0               
+# [16] tidybulk_1.15.4                 tidySpatialExperiment_0.99.13   tidySummarizedExperiment_1.12.0
+# [19] SpatialExperiment_1.10.0        tidySingleCellExperiment_1.13.3 SingleCellExperiment_1.24.0    
+# [22] ggplot2_3.4.4                   tidyr_1.3.1                     dplyr_1.1.4                    
+# [25] tidyseurat_0.8.0                ttservice_0.4.0                 edgeR_3.42.4                   
+# [28] limma_3.56.2                    SummarizedExperiment_1.32.0     Biobase_2.62.0                 
+# [31] GenomicRanges_1.54.1            GenomeInfoDb_1.36.4             IRanges_2.36.0                 
+# [34] S4Vectors_0.38.2                BiocGenerics_0.48.1             MatrixGenerics_1.12.3          
+# [37] matrixStats_1.2.0               Seurat_5.0.1                    SeuratObject_5.0.1             
+# [40] sp_2.1-3                       
 # 
 # loaded via a namespace (and not attached):
-#   [1] spatstat.sparse_3.0-3         bitops_1.0-7                  lubridate_1.9.3              
-#   [4] httr_1.4.7                    RColorBrewer_1.1-3            doParallel_1.0.17            
-#   [7] tools_4.3.1                   sctransform_0.4.1             utf8_1.2.4                   
-#  [10] R6_2.5.1                      HDF5Array_1.28.1              uwot_0.1.16                  
-#  [13] lazyeval_0.2.2                rhdf5filters_1.12.1           yardstick_1.2.0              
-#  [16] withr_2.5.2                   gridExtra_2.3                 preprocessCore_1.64.0        
-#  [19] progressr_0.14.0              cli_3.6.2                     spatstat.explore_3.2-5       
-#  [22] fastDummies_1.7.3             spatstat.data_3.0-3           readr_2.1.5                  
-#  [25] ggridges_0.5.5                pbapply_1.7-2                 Rsamtools_2.18.0             
-#  [28] R.utils_2.12.3                parallelly_1.36.0             rstudioapi_0.15.0            
-#  [31] RSQLite_2.3.4                 generics_0.1.3                shape_1.4.6                  
-#  [34] BiocIO_1.12.0                 spatstat.random_3.2-2         ica_1.0-3                    
-#  [37] Matrix_1.6-4                  RProtoBufLib_2.14.0           fansi_1.0.6                  
-#  [40] abind_1.4-5                   R.methodsS3_1.8.2             lifecycle_1.0.4              
-#  [43] yaml_2.3.8                    rhdf5_2.44.0                  recipes_1.0.9                
-#  [46] SparseArray_1.2.3             Rtsne_0.17                    grid_4.3.1                   
-#  [49] blob_1.2.4                    dqrng_0.3.2                   promises_1.2.1               
-#  [52] crayon_1.5.2                  miniUI_0.1.1.1                lattice_0.22-5               
-#  [55] beachmat_2.16.0               KEGGREST_1.40.1               magick_2.8.2                 
-#  [58] pillar_1.9.0                  knitr_1.45                    rjson_0.2.21                 
-#  [61] future.apply_1.11.1           codetools_0.2-19              leiden_0.4.3.1               
-#  [64] glue_1.7.0                    rsample_1.2.0                 data.table_1.14.10           
-#  [67] vctrs_0.6.5                   png_0.1-8                     spam_2.10-0                  
-#  [70] gtable_0.3.4                  cachem_1.0.8                  gower_1.0.1                  
-#  [73] xfun_0.41                     DropletUtils_1.20.0           S4Arrays_1.2.0               
-#  [76] mime_0.12                     prodlim_2023.08.28            tidygraph_1.3.0              
-#  [79] survival_3.5-7                timeDate_4032.109             iterators_1.0.14             
-#  [82] cytolib_2.14.0                hardhat_1.3.0                 lava_1.7.3                   
-#  [85] interactiveDisplayBase_1.38.0 ellipsis_0.3.2                fitdistrplus_1.1-11          
-#  [88] ROCR_1.0-11                   ipred_0.9-14                  nlme_3.1-164                 
-#  [91] bit64_4.0.5                   filelock_1.0.3                RcppAnnoy_0.0.21             
-#  [94] irlba_2.3.5.1                 KernSmooth_2.23-22            rpart_4.1.23                 
-#  [97] colorspace_2.1-0              DBI_1.2.1                     nnet_7.3-19                  
-# [100] tidyselect_1.2.0              bit_4.0.5                     compiler_4.3.1               
-# [103] curl_5.2.0                    glmnet_4.1-8                  xml2_1.3.6                   
-# [106] DelayedArray_0.28.0           plotly_4.10.4                 rtracklayer_1.62.0           
-# [109] scales_1.3.0                  lmtest_0.9-40                 rappdirs_0.3.3               
-# [112] goftest_1.2-3                 stringr_1.5.1                 digest_0.6.34                
-# [115] spatstat.utils_3.0-4          rmarkdown_2.25                XVector_0.42.0               
-# [118] htmltools_0.5.7               pkgconfig_2.0.3               sparseMatrixStats_1.12.2     
-# [121] fastmap_1.1.1                 rlang_1.1.3                   htmlwidgets_1.6.4            
-# [124] DelayedMatrixStats_1.22.6     shiny_1.8.0                   farver_2.1.1                 
-# [127] zoo_1.8-12                    jsonlite_1.8.8                BiocParallel_1.36.0          
-# [130] R.oo_1.25.0                   RCurl_1.98-1.14               magrittr_2.0.3               
-# [133] scuttle_1.10.3                GenomeInfoDbData_1.2.11       dotCall64_1.1-1              
-# [136] patchwork_1.2.0               Rhdf5lib_1.24.1               munsell_0.5.0                
-# [139] Rcpp_1.0.12                   viridis_0.6.4                 reticulate_1.34.0            
-# [142] furrr_0.3.1                   stringi_1.8.3                 ggraph_2.1.0                 
-# [145] zlibbioc_1.48.0               MASS_7.3-60.0.1               plyr_1.8.9                   
-# [148] parallel_4.3.1                listenv_0.9.0                 ggrepel_0.9.5                
-# [151] deldir_2.0-2                  Biostrings_2.70.1             graphlayouts_1.0.2           
-# [154] splines_4.3.1                 gridtext_0.1.5                tensor_1.5                   
-# [157] hms_1.1.3                     locfit_1.5-9.8                igraph_1.6.0                 
-# [160] spatstat.geom_3.2-7           RcppHNSW_0.5.0                reshape2_1.4.4               
-# [163] BiocVersion_3.17.1            XML_3.99-0.16                 evaluate_0.23                
-# [166] BiocManager_1.30.22           tzdb_0.4.0                    foreach_1.5.2                
-# [169] tweenr_2.0.2                  httpuv_1.6.13                 RANN_2.6.1                   
-# [172] polyclip_1.10-6               future_1.33.1                 scattermore_1.2              
-# [175] ggforce_0.4.1                 xtable_1.8-4                  restfulr_0.0.15              
-# [178] RSpectra_0.16-1               later_1.3.2                   viridisLite_0.4.2            
-# [181] class_7.3-22                  memoise_2.0.1                 AnnotationDbi_1.62.2         
-# [184] GenomicAlignments_1.38.0      cluster_2.1.6                 timechange_0.2.0             
-# [187] globals_0.16.2               
+#   [1] R.methodsS3_1.8.2             vroom_1.6.5                   nnet_7.3-19                   goftest_1.2-3                
+#   [5] Biostrings_2.70.2             HDF5Array_1.28.1              TH.data_1.1-2                 vctrs_0.6.5                  
+#   [9] spatstat.random_3.2-2         digest_0.6.34                 png_0.1-8                     shape_1.4.6                  
+#  [13] ggrepel_0.9.5                 deldir_2.0-2                  parallelly_1.37.0             magick_2.8.3                 
+#  [17] MASS_7.3-60.0.1               reshape2_1.4.4                httpuv_1.6.14                 foreach_1.5.2                
+#  [21] withr_3.0.0                   xfun_0.42                     ellipsis_0.3.2                survival_3.5-8               
+#  [25] memoise_2.0.1                 commonmark_1.9.1              RProtoBufLib_2.14.0           systemfonts_1.0.5            
+#  [29] ragg_1.2.7                    zoo_1.8-12                    pbapply_1.7-2                 R.oo_1.26.0                  
+#  [33] KEGGREST_1.40.1               promises_1.2.1                httr_1.4.7                    restfulr_0.0.15              
+#  [37] globals_0.16.2                fitdistrplus_1.1-11           rhdf5filters_1.12.1           rhdf5_2.44.0                 
+#  [41] rstudioapi_0.15.0             miniUI_0.1.1.1                generics_0.1.3                curl_5.2.0                   
+#  [45] zlibbioc_1.48.0               ggraph_2.1.0                  polyclip_1.10-6               GenomeInfoDbData_1.2.11      
+#  [49] SparseArray_1.2.3             interactiveDisplayBase_1.38.0 xtable_1.8-4                  stringr_1.5.1                
+#  [53] doParallel_1.0.17             evaluate_0.23                 S4Arrays_1.2.0                preprocessCore_1.64.0        
+#  [57] hms_1.1.3                     glmnet_4.1-8                  irlba_2.3.5.1                 colorspace_2.1-0             
+#  [61] filelock_1.0.3                ROCR_1.0-11                   reticulate_1.35.0             spatstat.data_3.0-4          
+#  [65] magrittr_2.0.3                lmtest_0.9-40                 later_1.3.2                   viridis_0.6.5                
+#  [69] lattice_0.22-5                spatstat.geom_3.2-8           future.apply_1.11.1           scattermore_1.2              
+#  [73] XML_3.99-0.16.1               scuttle_1.10.3                RcppAnnoy_0.0.22              class_7.3-22                 
+#  [77] pillar_1.9.0                  nlme_3.1-164                  iterators_1.0.14              compiler_4.3.1               
+#  [81] beachmat_2.16.0               RSpectra_0.16-1               stringi_1.8.3                 gower_1.0.1                  
+#  [85] tensor_1.5                    lubridate_1.9.3               GenomicAlignments_1.38.2      plyr_1.8.9                   
+#  [89] crayon_1.5.2                  abind_1.4-5                   BiocIO_1.12.0                 locfit_1.5-9.8               
+#  [93] graphlayouts_1.1.0            bit_4.0.5                     sandwich_3.1-0                textshaping_0.3.7            
+#  [97] codetools_0.2-19              multcomp_1.4-25               recipes_1.0.9                 plotly_4.10.4                
+# [101] mime_0.12                     rsample_1.2.0                 splines_4.3.1                 markdown_1.12                
+# [105] Rcpp_1.0.12                   fastDummies_1.7.3             sparseMatrixStats_1.12.2      gridtext_0.1.5               
+# [109] knitr_1.45                    blob_1.2.4                    utf8_1.2.4                    BiocVersion_3.17.1           
+# [113] listenv_0.9.1                 DelayedMatrixStats_1.22.6     Matrix_1.6-5                  tzdb_0.4.0                   
+# [117] tweenr_2.0.2                  pkgconfig_2.0.3               tools_4.3.1                   cachem_1.0.8                 
+# [121] RSQLite_2.3.5                 viridisLite_0.4.2             DBI_1.2.2                     fastmap_1.1.1                
+# [125] rmarkdown_2.25                scales_1.3.0                  grid_4.3.1                    ica_1.0-3                    
+# [129] Rsamtools_2.18.0              patchwork_1.2.0               BiocManager_1.30.22           dotCall64_1.1-1              
+# [133] RANN_2.6.1                    rpart_4.1.23                  farver_2.1.1                  tidygraph_1.3.1              
+# [137] yaml_2.3.8                    rtracklayer_1.62.0            cli_3.6.2                     leiden_0.4.3.1               
+# [141] lifecycle_1.0.4               uwot_0.1.16                   mvtnorm_1.2-4                 lava_1.7.3                   
+# [145] DropletUtils_1.20.0           BiocParallel_1.36.0           cytolib_2.14.0                timechange_0.3.0             
+# [149] gtable_0.3.4                  rjson_0.2.21                  ggridges_0.5.6                yardstick_1.3.0              
+# [153] progressr_0.14.0              parallel_4.3.1                jsonlite_1.8.8                RcppHNSW_0.6.0               
+# [157] bitops_1.0-7                  bit64_4.0.5                   Rtsne_0.17                    spatstat.utils_3.0-4         
+# [161] dqrng_0.3.2                   R.utils_2.12.3                timeDate_4032.109             lazyeval_0.2.2               
+# [165] shiny_1.8.0                   htmltools_0.5.7               sctransform_0.4.1             rappdirs_0.3.3               
+# [169] glue_1.7.0                    spam_2.10-0                   XVector_0.42.0                RCurl_1.98-1.14              
+# [173] gridExtra_2.3                 igraph_2.0.2                  R6_2.5.1                      cluster_2.1.6                
+# [177] Rhdf5lib_1.24.1               ipred_0.9-14                  DelayedArray_0.28.0           tidyselect_1.2.0             
+# [181] ggforce_0.4.2                 xml2_1.3.6                    AnnotationDbi_1.62.2          future_1.33.1                
+# [185] munsell_0.5.0                 KernSmooth_2.23-22            furrr_0.3.1                   data.table_1.15.0            
+# [189] htmlwidgets_1.6.4             RColorBrewer_1.1-3            rlang_1.1.3                   spatstat.sparse_3.0-3        
+# [193] spatstat.explore_3.2-6        fansi_1.0.6                   hardhat_1.3.1                 prodlim_2023.08.28     
 ```
